[package]
authors = ["Sergey Parilin <parilinsa@gmail.com>"]
edition = "2018"
name = "asdl-rs"
version = "0.1.0"

[dependencies]
failure = "0.1.5"
heck = "0.3.1"
m_lexer = "0.0.4"
rowan = "0.5.0"
rustc-hash = "1.0.1"
serde_json = "1.0.39"
tera = "0.11.20"

[dependencies.serde]
features = ["derive"]
version = "1.0.91"

[dev-dependencies]
insta = "0.8.1"
