[package]
authors = ["Sergey Parilin <parilinsa@gmail.com>"]
edition = "2018"
name = "asdl_tera"
version = "1.0.1"
description = "CLI application for asdl based code generation using tera template engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pasa/asdl-rs.git"

[dependencies]
asdl = { path = "../asdl" }
clap = "2.33.0"
heck = "0.3.1"
tera = "0.11.20"

[dependencies.serde]
features = ["derive"]
version = "1.0.91"

